--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "eslint": "^8.10.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
@@ -19,7 +20,9 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   }
 }
